# CrewAI-Planificador-de-Viajes

./: .gitignore  README.md  package-lock.json  package.json
Backend-Proyecto-Planificador-de-Viajes/: .env.example  COMANDOS.md  README.md  pyproject.toml
Backend-Proyecto-Planificador-de-Viajes-Hierarchical/: .dockerignore  .env.example  COMANDOS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Backend-Proyecto-Planificador-de-Viajes-Hierarchical/src/backend_proyecto_planificador_de_viajes/: crew.py  db.py  main.py  router.py
Backend-Proyecto-Planificador-de-Viajes-Hierarchical/src/backend_proyecto_planificador_de_viajes/config/: agents.yaml
Backend-Proyecto-Planificador-de-Viajes/src/backend_proyecto_planificador_de_viajes/: crew.py  main.py
Backend-Proyecto-Planificador-de-Viajes/src/backend_proyecto_planificador_de_viajes/config/: agents.yaml  tasks.yaml
Backend-Proyecto-Planificador-de-Viajes/src/backend_proyecto_planificador_de_viajes/tools/: custom_tool.py
Frontend-Proyecto-Planificador-de-Viajes/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend-Proyecto-Planificador-de-Viajes/src/: App.tsx  index.css  types.ts
Frontend-Proyecto-Planificador-de-Viajes/src/components/: AgentProgress.tsx  ChatInput.tsx  ChatMessageView.tsx  DayCard.tsx  DestImage.tsx  ItineraryView.tsx  Markdown.tsx  RecommendedItems.tsx  Sidebar.tsx  ThinkingIndicator.tsx  TripFilters.tsx
Frontend-Proyecto-Planificador-de-Viajes/src/lib/: api.ts  generatePdf.ts  images.ts  parseItinerary.ts  session.ts
(+1 files in other folders)
